# ignite-sentinel

./: .gitattributes  .gitignore  .kilocodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MAINTAINERS.md  PORTABILITY.md  README.md  kilo.jsonc  pyproject.toml  verify.ps1
.claude/: settings.json
Project Ignite v6.0 en Roo Code Vol 7.4 Sentinel Skills/: Project Ignite v6.0 en Roo Code Vol 0 Fundamentos.md  Project Ignite v6.0 en Roo Code Vol 1 Nucleo de Gobernanza.md  Project Ignite v6.0 en Roo Code Vol 2 Centro de Comando.md  Project Ignite v6.0 en Roo Code Vol 3 Boveda de Moldes.md  Project Ignite v6.0 en Roo Code Vol 4 El Cerebro.md  Project Ignite v6.0 en Roo Code Vol 5 Registro de Produccion.md  Project Ignite v6.0 en Roo Code Vol 6 Registro de Alimentacion.md  Project Ignite v6.0 en Roo Code Vol 7.1 Sentinel Logic.md  Project Ignite v6.0 en Roo Code Vol 7.2 Sentinel Command Protocols.md  Project Ignite v6.0 en Roo Code Vol 7.3 Sentinel Master Templates.md  Project Ignite v6.0 en Roo Code Vol 7.4 Sentinel Skills.md
installers/: build_pyz.ps1  build_pyz.sh  install.ps1  install.sh  sentinel.ps1  sentinel.sh
sentinel/: __init__.py  adapters.py  assumptions.py  backlog_gates.py  backlog_hooks.py  backlog_refinement.py  backlog_rollup.py  backlog_status.py  blocks.py  build.py  cli.py  context_requests.py  dashboard.py  decisions.py  deltas.py  development_readiness.py  discovery.py  doctor.py  domain_context.py  drift.py  ears.py  export.py  gap_resolution.py  gaps.py  generation.py  handoff_contracts.py  health.py  hooks_logic.py  ids.py  implementation_feedback.py  interaction_digest.py  iso29148.py  knowledge_ledger.py  knowledge_metabolism.py  lens_registry.py  maturity.py  mcp.py  memory.py  portability.py  prd.py  (+19 more)
tests/: golden_normalize.py  test_adr_grade_decisions.py  test_annotate.py  (+119 more)
(+335 files in other folders)
