[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ignite-sentinel"
version = "0.1.0"
description = "Repo-local BA/Product requirements operating framework for AI PODs."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
memory = [
  "lancedb"
]
embeddings = [
  "sentence-transformers"
]
mcp = [
  "mcp"
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools]
packages = ["sentinel"]

[tool.setuptools.package-data]
sentinel = ["schemas/*.json", "templates/*.md"]
