[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ignite-sentinel"
version = "0.2.0"
description = "Repo-local BA/Product requirements operating framework for AI PODs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
memory = [
  "lancedb"
]
memory-semantic = [
  "model2vec",
  "sentence-transformers"
]
embeddings = [
  "model2vec",
  "sentence-transformers"
]
mcp = [
  "mcp"
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools]
packages = ["sentinel"]

[tool.setuptools.package-data]
sentinel = ["schemas/*.json", "templates/*.json", "lenses/*.json", "smells/*.json", "techniques/*.json", "risk_categories/*.json", "iso29148/*.json", "retrieval_plans/*.json", "slicing/*.json", "handoff_contracts/*.json"]
